files from second workshop

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,6 +34,7 @@
           <p class="name">{{this.name}}</p>
           <p><span>Difficulty level:</span> {{this.difficultyLevel}}</p>
           <a class="btn" href="/details/{{this.id}}">Details</a>
+          <a class="btn" href="/attach/accessory/{{this.id}}">Add</a>
         </div>
       {{/each}}
       {{!-- <div class="cube">
