--- a/views/details.hbs
+++ b/views/details.hbs
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <title>Attach Accessory</title>
     <link href="/css/site.css" type="text/css" rel="stylesheet">
-    <link rel='shortcut icon' type='image/x-icon' href='./images/favicon.png' />
+    <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.png' />
 </head>
 <body>
     <div class="container">
         <header>
             <ul>
-                <li><img class="logo" src="/images/logo.png"></li>
+                <li><img class="logo" src="./images/logo.png"></li>
                 <li><a href="/">Browse</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="/create">Add a Cube</a></li>
                 <li><a href="/create/accessory">Add Accessory</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/logout">Logout</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
             </ul>
         </header>
         <main>
@@ -24,6 +27,10 @@
             <div class="details">
                 <p><span>Description:</span>{{cube.description}}</p>
                 <p><span>Difficulty level:</span>{{cube.difficultyLevel}}</p>
+                {{#if user}} 
+                    <a class="btn" href="/edit/{{cube._id}}">Edit</a>
+                    <a class="btn" href="/delete/{{cube._id}}">Delete</a>
+                {{/if}}
                 <a class="btn" href="/">Back</a>
             </div>
             <h2>Accessories</h2>
