--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About Page</title>
-  <link href="/css/site.css" type="text/css" rel="stylesheet">
-  <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.png' />
+  <title>Login Page</title>
+  <link href="./css/site.css" type="text/css" rel="stylesheet">
+  <link rel='shortcut icon' type='image/x-icon' href='./images/favicon.png' />
 </head>
 
 <body>
@@ -23,18 +23,24 @@
       </ul>
     </header>
     <main>
-      <h1>About Cubicle</h1>
-      <div class="about">
-        <p>
-          <i>"Cubicle"</i> is a place, where you can browse some of the most popular rubik cubes in the world and add
-          some new cubes that
-          you have discovered. This application was created as an exercise for the <a
-            href="https://softuni.bg/trainings/2452/js-back-end-september-2019">JS Back-End course</a> at the
-          <a href="https://softuni.bg/">Software University</a>.</p>
-      </div>
+	<h1>Login Form</h1>
+<div class="form">
+    <form action='/login' method="POST">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username">
+        {{#if message}}
+        <div>{{message}}</div>
+        {{/if}}
+
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+        <input type="submit" value="Login">
+    </form>
+</div>
     </main>
   </div>
   <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
+
 </body>
 
 </html>
