added header as partial on all views

--- a/views/editCube.hbs
+++ b/views/editCube.hbs
@@ -10,24 +10,16 @@
 
 <body>
   <div class="container">
-    <header>
-      <ul>
-        <li><img class="logo" src="./images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/create">Add a Cube</a></li>
-        <li><a href="/create/accessory">Add Accessory</a></li>
-        <li><a href="/logout">Logout</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-      </ul>
-    </header>
+    {{> header}}
     <main>
 	<h1>Edit Cube</h1>
 <div class="form">
   <form action='/edit/{{cube._id}}' method="POST">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" value="{{cube.name}}">
+    {{#if errors.name}}
+      <div class="error">{{ errors.name.message }}</div>
+    {{/if}}
     <label for="name">Description</label>
     <textarea id="name" name="description">{{cube.description}}</textarea>
     <label for="image">ImageUrl</label>
