--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,18 +10,8 @@
 
 <body>
   <div class="container">
-    <header>
-      <ul>
-        <li><img class="logo" src="./images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/create">Add a Cube</a></li>
-        <li><a href="/create/accessory">Add Accessory</a></li>
-        <li><a href="/logout">Logout</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-      </ul>
-    </header>
+    {{!-- header  --}}
+    {{> header}}
     <main>
 	<h1>Register Form</h1>
 <div class="form">
@@ -29,11 +19,14 @@
         <label for="username">Username</label>
         <input type="text" id="username" name="username">
         {{#if errors.username}}
-          <div class="error">{{ errors.username }}</div>
+          <div class="error">{{ errors.username.message }}</div>
         {{/if}}
       
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
+        {{#if errors.password }}
+          <div class="error">{{ errors.password.message }}</div>
+        {{/if}}
 
         <label for="repeatPassword">Re-Password</label>
         <input type="password" id="repeatPassword" name="repeatPassword">
