--- a/views/500.hbs
+++ b/views/500.hbs
@@ -10,14 +10,7 @@
 
 <body>
     <div class="container">
-        <header>
-            <ul>
-                <li><img class="logo" src="/images/logo.png"></li>
-                <li><a href="/">Browse</a></li>
-                <li><a href="/create">Add a Cube</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </header>
+        {{> header}}
         <main>
             <img id="sadFaceImg"
                 src="https://imageog.flaticon.com/icons/png/512/42/42901.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
