--- a/views/create.hbs
+++ b/views/create.hbs
@@ -10,22 +10,14 @@
 
 <body>
   <div class="container">
-    <header>
-      <ul>
-        <li><img class="logo" src="./images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/create">Add a Cube</a></li>
-        <li><a href="/create/accessory">Add Accessory</a></li>
-        <li><a href="/logout">Logout</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-      </ul>
-    </header>
+    {{> header}}
     <main>
       <h1>Create</h1>
       <div class="form">
         <form action='/create' method="POST">
+          {{#if errors.name}}
+            <div class="error">{{ errors.name.message }}</div>
+          {{/if}}
           <label for="name">Name</label>
           <input type="text" id="name" name="name">
           <label for="name">Description</label>
