--- a/views/details.hbs
+++ b/views/details.hbs
@@ -9,25 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <ul>
-                <li><img class="logo" src="./images/logo.png"></li>
-                <li><a href="/">Browse</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/create">Add a Cube</a></li>
-                <li><a href="/create/accessory">Add Accessory</a></li>
-                <li><a href="/logout">Logout</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
-            </ul>
-        </header>
+        {{> header}}
         <main>
             <h1>{{cube.name}}</h1>
             <img class="cube" src="{{cube.imageUrl}}">
             <div class="details">
                 <p><span>Description:</span>{{cube.description}}</p>
                 <p><span>Difficulty level:</span>{{cube.difficultyLevel}}</p>
-                {{#if user}} 
+                {{#if user }} 
                     <a class="btn" href="/edit/{{cube._id}}">Edit</a>
                     <a class="btn" href="/delete/{{cube._id}}">Delete</a>
                 {{/if}}
