--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,21 +10,7 @@
 
 <body>
   <div class="container">
-    <header>
-      <ul>
-        <li><img class="logo" src="./images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/create">Add a Cube</a></li>
-        <li><a href="/create/accessory">Add Accessory</a></li>
-        {{#if user}}
-        <li><a href="/logout">Logout</a></li>
-        {{else}}
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-        {{/if}}
-      </ul>
-    </header>
+    {{> header}}
     <main>
       <h1>Browser</h1>
       <form action="" method="">
